# Bookey

./: .gitignore  README.md  install.sh  pyproject.toml
src/bookey/: app.py  auth.py  cli.py  google_calendar.py  style.tcss
src/bookey.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/bookey/screens/: calendar_ui.py  main_menu.py
