[project]
name = "bookey"
version = "0.1.0"
description = "A TUI for Google Calendar and Tasks"
readme = "README.md"
requires-python = ">=3.10"

# dependencies that we need for the project

dependencies = [
    "textual>=0.47.0",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]

[project.scripts]

# makes the bk command work to run the TUI

bk = "bookey.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
